--- a/app/src/main/res/layout/info_window.xml
+++ b/app/src/main/res/layout/info_window.xml
@@ -47,18 +47,19 @@
         android:layout_below="@id/devicestatus">
 
         <Button
-            android:id="@+id/p"
+            android:id="@+id/btn_sitution"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/devicestatus"
+            android:text="设备参数"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:background="@drawable/button" />
         <Button
+            android:id="@+id/btn_camera"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/p"
-            android:text="@string/devicestatus"
+            android:layout_toRightOf="@id/btn_sitution"
+            android:text="查看监控"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:background="@drawable/button" />
