--- a/app/src/main/res/layout/record_warninglist.xml
+++ b/app/src/main/res/layout/record_warninglist.xml
@@ -1,14 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="210dp"
     android:background="@color/white"
     android:layout_height="wrap_content">
-
-    <TextView
-        android:id="@+id/warn_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/black"
-        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/timeimg"
@@ -17,15 +10,13 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="10dp"
         android:text="警报时间"
-        android:textColor="@color/list_text"
-        android:layout_below="@id/warn_status"/>
+        android:textColor="@color/list_text" />
     <TextView
         android:id="@+id/timetv"
         android:layout_width="wrap_content"
         android:layout_height="25dp"
         android:height="25dp"
         android:layout_toRightOf="@id/timeimg"
-        android:layout_below="@id/warn_status"
         android:layout_alignBaseline="@+id/timeimg"
         android:layout_margin="5dp"
         android:textSize="15sp"
