--- a/app/src/main/res/layout/warninglist.xml
+++ b/app/src/main/res/layout/warninglist.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="160dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="#ffffff"
     android:id="@+id/popwarning"
@@ -8,6 +8,6 @@
 
     <ListView
         android:id="@+id/warninglist"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="210dp"
+        android:layout_height="wrap_content" />
 </LinearLayout>
