--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="@dimen/dp_7"
             android:scaleType="fitXY"
-            android:src="@mipmap/warning" />
+            android:src="@mipmap/btn_menu" />
 
     </RelativeLayout>
 
