--- a/app/src/main/res/layout/info_window.xml
+++ b/app/src/main/res/layout/info_window.xml
@@ -47,30 +47,21 @@
         android:layout_below="@id/devicestatus">
 
         <Button
-            android:id="@+id/btn_sitution"
-            android:layout_width="90dp"
-            android:layout_height="35dp"
-            android:text="设备参数"
+            android:id="@+id/p"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/devicestatus"
             android:textColor="@color/black"
             android:textSize="15sp"
-            android:background="@mipmap/blue_block" />
+            android:background="@drawable/button" />
         <Button
-            android:id="@+id/btn_camera"
-            android:layout_width="90dp"
-            android:layout_height="35dp"
-            android:layout_toRightOf="@id/btn_sitution"
-            android:text="查看监控"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/p"
+            android:text="@string/devicestatus"
             android:textColor="@color/black"
             android:textSize="15sp"
-            android:background="@mipmap/blue_block" />
+            android:background="@drawable/button" />
     </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/info_back"
-        android:layout_width="16dp"
-        android:layout_height="16dp"
-        android:layout_marginLeft="26dp"
-        android:layout_toRightOf="@id/devicenum"
-        android:scaleType="fitXY"
-        android:src="@mipmap/wrong" />
 </RelativeLayout>
