--- a/app/src/main/res/layout/record_warninglist.xml
+++ b/app/src/main/res/layout/record_warninglist.xml
@@ -1,6 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="210dp"
-    android:background="@color/white"
+    android:background="@color/list_record"
     android:layout_height="wrap_content">
 
     <ImageView
